# my-python-mcp-server

./: README.md
src/: README.md  main.py  pyproject.toml
